manifests/service/landing/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: landing-redirect
  namespace: service
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-ingress
  namespace: service
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: service-landing-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: liberte.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
    - host: www.liberte.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: landing
                port:
                  number: 80
  tls:
    - secretName: landing-tls
      hosts:
        - liberte.top
        - www.liberte.top
